--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 
 @theme {
   --font-dm-sans: var(--font-dm-sans);
+  --font-inter: var(--font-inter);
   --color-primary: #043873;
   --color-blue: #4f9cf9;
   --color-yellow: #ffe492;
