--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 @theme {
   --font-dm-sans: var(--font-dm-sans);
   --font-inter: var(--font-inter);
+
+  --breakpoint-xl-custom: 1152px;
+
   --color-primary: #043873;
   --color-blue: #4f9cf9;
   --color-yellow: #ffe492;
